[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { version = "*" }
lazy_static = { version = "*", features = ["spin_no_std"] }
log = "*"
sbi-rt = { version = "*", features = ["legacy"] }

[profile.release]
debug = true